--- a/reference/Tenant.v1.yaml
+++ b/reference/Tenant.v1.yaml
@@ -331,7 +331,7 @@ paths:
 components:
   schemas:
     Tenant-Account:
-      description: The tenant account object
+      description: ''
       type: object
       properties:
         id:
