--- a/reference/Tenant.v1.yaml
+++ b/reference/Tenant.v1.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.0
 info:
-  title: Tenants
+  title: Tenant Management
   version: '1.0'
-  description: ''
+  description: Endpoints for creating and managing Counterbalance tenant accounts
 servers:
   - url: 'https://api.counterbalance.io'
     description: Production API
