--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -88,7 +88,7 @@ paths:
                 - family_name
                 - email
                 - type
-        description: '**Request** body description...'
+        description: ''
       parameters: []
       security:
         - Bearer Token: []
@@ -169,7 +169,7 @@ paths:
       description: |-
         Retrieve a user account by ID
 
-        > This endpoint accepts `self` in place of a UUID
+        > _This endpoint accepts `self` in place of a UUID_
       security:
         - Bearer Token: []
     patch:
