--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -448,7 +448,7 @@ paths:
         name: userId
         in: path
         required: true
-        description: The user's UUID
+        description: A valid user account UUID
     get:
       summary: Get User Permissions
       tags: []
