--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -458,7 +458,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
+                type: array
                 $ref: '#/components/schemas/User-Permissions'
               examples:
                 Example:
@@ -471,9 +471,9 @@ paths:
                     - 'user:account:*'
       operationId: get-v1-user-userId-permissions
       description: |-
-        Retreieve permissions for a given user
+        Retrieve permissions for a given user
 
-        > This endpoint accepts `self` in place of a UUID
+        > _This endpoint accepts `self` in place of a UUID_
       security:
         - Bearer Token: []
 components:
@@ -695,7 +695,7 @@ components:
     User-Permissions:
       title: User Account Permissions
       type: array
-      description: ''
+      description: 'An array of user account permission strings'
       x-examples:
         Example:
           - 'billing:account:view'
