--- a/reference/User.v1.yaml
+++ b/reference/User.v1.yaml
@@ -408,7 +408,7 @@ paths:
           application/octet-stream:
             schema:
               type: object
-  '/v1/user/{userId}/roles':
+  '/v1/user/{userId}/roles/{roleId}':
     parameters:
       - schema:
           type: string
@@ -417,6 +417,12 @@ paths:
         in: path
         required: true
         description: A valid user account UUID
+      - schema:
+          type: string
+        name: roleId
+        in: path
+        required: true
+        description: A valid role ID
     get:
       summary: Get User's Assigned Roles
       tags: []
@@ -426,8 +432,12 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties: {}
+                $ref: '#/components/schemas/User-Assigned-Roles'
+              examples:
+                Example:
+                  value:
+                    roles:
+                      - rol_ef4g...
       operationId: get-v1-user-userId-roles
       description: |-
         Retrieve a list of roles assigned to a user
@@ -442,14 +452,15 @@ paths:
       responses:
         '200':
           description: OK
-        '404':
-          description: Not Found
           content:
             application/json:
               schema:
-                type: object
-                properties: {}
-              examples: {}
+                $ref: '#/components/schemas/User-Assigned-Roles'
+              examples:
+                Example:
+                  value:
+                    roles:
+                      - rol_ef4g...
       requestBody:
         content:
           application/json:
@@ -466,6 +477,11 @@ paths:
                     type: string
               required:
                 - roles
+            examples:
+              Example:
+                value:
+                  roles:
+                    - rol_ef4g...
         description: ''
       security:
         - Bearer Token: []
@@ -477,25 +493,17 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User-Assigned-Roles'
+              examples:
+                Example:
+                  value:
+                    roles: []
       description: Remove one or more roles from a user
       security:
         - Bearer Token: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                roles:
-                  type: array
-                  minItems: 1
-                  uniqueItems: true
-                  maxItems: 10
-                  items:
-                    type: string
-              required:
-                - roles
-        description: ''
   /v1/user/self/preferences:
     parameters: []
     get:
@@ -805,6 +813,19 @@ components:
           - 'user:account:*'
       items:
         type: string
+    User-Assigned-Roles:
+      title: User Assigned Roles
+      type: object
+      description: ''
+      properties:
+        roles:
+          type: array
+          items:
+            type: string
+      x-examples:
+        Example:
+          roles:
+            - rol_ef4g...
   securitySchemes:
     Bearer Token:
       type: http
