--- a/reference/Config.v1.yaml
+++ b/reference/Config.v1.yaml
@@ -2,6 +2,11 @@ openapi: 3.0.0
 info:
   title: Config
   version: v1.0
+  description: ''
+  termsOfService: 'https://www.counterbalance.io/legal/api-terms'
+  contact:
+    name: Taylor Vick
+    email: support@counterbalance.io
 servers:
   - url: 'https://api.counterbalance.io'
     description: Production API
