--- a/reference/Sites.v1.yaml
+++ b/reference/Sites.v1.yaml
@@ -3,6 +3,10 @@ info:
   title: Sites
   version: v1.0
   description: ''
+  termsOfService: 'https://www.counterbalance.io/legal/api-terms'
+  contact:
+    name: Taylor Vick
+    email: support@counterbalance.io
 servers:
   - url: 'https://api.counterbalance.io'
     description: Production API
