--- a/reference/Billing.v1.yaml
+++ b/reference/Billing.v1.yaml
@@ -3,8 +3,32 @@ info:
   title: Subscription & Billing
   version: '1.0'
   description: Manage tenant account subscriptions and an associated billing account including payment methods
+  termsOfService: 'https://www.counterbalance.io/legal/api-terms'
+  contact:
+    name: Taylor Vick
+    email: support@counterbalance.io
 servers:
-  - url: 'http://localhost:3000'
-paths: {}
+  - url: 'https://api.counterbalance.io'
+    description: Production API
+paths:
+  /v1/billing/account:
+    get:
+      summary: Get Billing Account
+      tags: []
+      responses: {}
+      operationId: get-v1-billing-account
+      description: Retrieve the billing account for the authenticated user's tenant account
+      security:
+        - Bearer Token: []
 components:
-  schemas: {}
+  schemas:
+    Billing-Account:
+      title: Billing-Account
+      type: object
+      properties:
+        id:
+          type: string
+  securitySchemes:
+    Bearer Token:
+      type: http
+      scheme: bearer
